# sycamore

./: README  clean_sycamore.sh  communication_protocol.txt  roadmap.txt
constraints/: s3esk_sycamore.ucf
docs/: Miracle Grow.graphml  roadmap.txt
miracle_grow/: README  communication_protocol.txt  programming_notes.txt  roadmap.txt
miracle_grow/constraints/: s3esk_ddr.ucf  s3esk_sycamore.ucf  s3esk_tft.ucf
miracle_grow/doc/: communication_protocol.txt  programming_notes.txt
miracle_grow/rtl/: mg_defines.v
miracle_grow/scripts/: generate_io_handler.py  generate_slave.py
miracle_grow/sim/: wave_script.tcl
rtl/: output_handler.v  top.v  uart_io_handler.v
sap/: runtests.py  sap  sap.py  setup.py  todo.txt
sap/sap/: runtests.py  sap.py
sap/sapcmd/: .sapcmp.py.swp  Makefile
sap/sapgui/: build_controller.py  bus_view.glade  graph_drawer.py  graph_drawing_area.py  graph_utils.py  module_view.glade  module_view.py  open_dialog.glade  open_dialog.py  project_properties_view.glade  project_properties_view.py  project_view.py  properties_dialog.glade  properties_dialog.py  property_view.py  runtests.py  sap_controller.py  sap_graph_controller.py  sap_graph_manager.py  (+7 more)
sim/: Makefile  design  design.vcd  faux_uart.v  file_list.txt  input_stimulus.txt  main.v  sha2_controller_tb.v  uart_input_handler.v  uart_input_handler_tb.v  uart_output_handler_tb.v
sycamore_gui/: sycamore_gui.py  sycamore_view.glade
xylem/userland/sycamore1/s1-control/: CMakeLists.txt  README
xylem/userland/sycamore1/s1-control/src/: comm.c  comm.h  eeprom.c  eeprom.h  main.c
(+462 files in other folders)
